# Travel_agent_system

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  start.sh  test_backend.py  validate.sh
backend/: Dockerfile  alembic.ini  tests.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  models.py
backend/app/models/: schemas.py
backend/app/routes/: auth.py  travel.py
backend/app/services/: agent_service.py  llm_service.py
backend/app/tools/: classifier_tool.py  rag_tool.py  weather_tool.py
docs/: AGENT_FLOW.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  FILE_INVENTORY.md  NAVIGATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  SETUP.md  START_HERE.md  TESTING_GUIDE.md  project_stats.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/pages/: AuthPage.jsx  TravelPlannerPage.jsx
frontend/src/styles/: Auth.css  TravelPlanner.css
scripts/: init_db.py
