[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-ai-agent"
version = "1.0.0"
description = "Smart Travel Planner - AI-powered travel planning system"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "langchain==0.1.10",
    "langchain-google-genai",
    "langgraph==0.0.26",
    "langsmith==0.1.17",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
]

[tool.uv]
package = false
